2001-04-01  Elliot Glaysher <nuriko.chan@home.com>

	* lib/ucomics (ga): Updated the days behind from 14 to 0 thanks
	to Garry Glendown.
	
2001-03-29  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* show_comics (lock_file): When lock file exists, the error
	message is now printed even without verbosity.

2001-03-23  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* lib/ucomics (ga): Moved Garfield to ucomics thanks to
	Ian Campbell.

2001-03-21  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* show_comics: Patched to allow png files thanks to Shawn Oakey

2001-03-20  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* lib/keenspace, lib/reallife (real): Updated thanks to
	Shawn Oakey.
	* Makefile (MODULES): Added Help Desk, Life on Forbez, &
	Lost and Found thanks to Max Zomborszki.
	* lib/whenigrowup (wigu): Updated thanks to 
	Max Zomborszki.

2001-03-18  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* lib/doodie (doodie): updated for site changes.

2001-03-15  Elliot Glaysher <nuriko.chan@home.com>

	* lib/doemain: Fixed module so it won't load while the author
	is redesigning her website.

2001-03-11  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* netcomics (get_comics): Fixed bug introduced with new separate
	comics feature.
	(print urls/files): Fixed it so that it would only print out the
	selected comics for the selected dates.

2001-03-08  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* netcomics: Fixed printing of URLs when no webpage created so
	that the selected comics' URLs are always printed.  Also, if not
	creating a webpage, filenames are now printed simliarly.
	* netcomics: Fixed POD so that manpage example list items are
	formatted correctly by adding titles to each item.  Changed the
	BUGS list to simply reference the TODO file.

2001-03-05  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* lib/toonville: Fixed determination of the date for filetype.

2001-03-04  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>
